fix scrollbars on terra

--- a/app/assets/stylesheets/front/wines/terra.scss
+++ b/app/assets/stylesheets/front/wines/terra.scss
@@ -7,51 +7,53 @@
     width: 100%;
 
     background-color: #EEEDE7;
-    
+
     .toTerroir {
-        display: none;
-
-        text-decoration: none;
-        text-transform: uppercase;
-
-        font-family: $sansFamily;
-        font-size: 10px;
-        color: #000000;
-        letter-spacing: 1px;
-        line-height: 13px;
-        font-weight: 700;
-
         position: absolute;
         top: 40px;
         left: 110px;
+
+        display: none;
+
         padding-bottom: 1px;
+
+        text-decoration: none;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+
+        color: #000000;
         border-bottom: 1px solid #000;
+
+        font-family: $sansFamily;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 13px;
     }
-    
+
     .contentContainer {
         padding: 91px 25px 0;
-        
+
         .headerCommon {
+            padding-bottom: 45px;
+
+            letter-spacing: 0.45px;
+
+            color: #000000;
+
             font-family: $serifFamily;
             font-size: 28px;
-            color: #000000;
-            letter-spacing: 0.45px;
-            line-height: 29px;
             font-weight: 400;
-
-            padding-bottom: 45px;
+            line-height: 29px;
         }
 
         .palatiPicture, .numullitePicture {
-            background-repeat: no-repeat;
-            background-size: cover;
-
             width: 100vw;
             height: 191px;
-
+            margin-bottom: 39px;
             margin-left: calc(-50vw + 50%);
 
-            margin-bottom: 39px;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
 
         .palatiPicture {
@@ -67,27 +69,30 @@
         }
 
         .descriptionCommon {
+            padding-bottom: 20px;
+
+            letter-spacing: 1.1px;
+
+            color: #000000;
+
             font-family: $sansFamily;
             font-size: 14px;
-            color: #000000;
-            letter-spacing: 1.1px;
-            line-height: 20px;
             font-weight: 400;
-
-            padding-bottom: 20px;
+            line-height: 20px;
         }
 
         .titleCommon {
-            font-family: $sansFamily;
-            font-size: 12px;
-            color: #000000;
-            letter-spacing: 1.8px;
-            line-height: 20px;
-            font-weight: 700;
+            padding-bottom: 5px;
 
+            letter-spacing: 1.8px;
             text-transform: uppercase;
 
-            padding-bottom: 5px;
+            color: #000000;
+
+            font-family: $sansFamily;
+            font-size: 12px;
+            font-weight: 700;
+            line-height: 20px;
         }
 
         .table {
@@ -110,26 +115,24 @@
 
             width: 100vw;
             height: 45px;
+            margin-top: 60px;
             margin-left: calc(-50vw + 50%);
             padding: 0 25px;
 
             letter-spacing: 0.75px;
-            font-family: $sansFamily;
 
             color: #EEEDE7;
             background-color: #323232;
 
+            font-family: $sansFamily;
             font-size: 9px;
             line-height: 12px;
-
-            margin-top: 60px;
 
             a {
                 cursor: pointer;
                 text-decoration: none;
 
                 color: #EEEDE7;
-
                 border-bottom: 1px solid rgba(255, 255, 255, 0.3);
             }
         }
@@ -137,25 +140,25 @@
 
     .polatiNummulite {
         display: none;
-        flex-direction: column;
         overflow: scroll;
+        flex-direction: column;
 
         min-width: 50%;
 
         .polatiBigPicture {
+            min-height: 50%;
+
             background-image: asset-url('palati_big.png');
             background-repeat: no-repeat;
             background-size: cover;
-
-            min-height: 50%;
         }
 
         .nummuliteBigPicture {
+            min-height: 50%;
+
             background-image: asset-url('numullite_big.png');
             background-repeat: no-repeat;
             background-size: cover;
-
-            min-height: 50%;
         }
     }
 }
@@ -164,56 +167,63 @@
 @media (min-width: 800px) {
     .terraInnerWrapper {
         flex-direction: row;
+
         padding-left: 50px;
-        
+
         .toTerroir {
             display: table;
         }
-        
+
         .contentContainer {
-            padding-left: 60px;
+            min-width: 50%;
             padding-right: 60px;
             padding-bottom: 66px;
-            min-width: 50%;
-            
+            padding-left: 60px;
+
             .headerCommon {
-                font-size: 34px;
-                color: #1A1A1A;
                 letter-spacing: 0.55px;
+
+                color: #1A1A1A;
+
+                font-size: 34px;
                 line-height: 60px;
             }
-            
+
             .titleCommon {
-                font-size: 10px;
-                color: #000000;
-                letter-spacing: 1.5px;
-                line-height: 15px;
-                
                 padding-bottom: 6px;
-            }
-            
-            .descriptionCommon {
-                font-size: 10px;
+
+                letter-spacing: 1.5px;
+
                 color: #000000;
-                letter-spacing: 1.1px;
+
+                font-size: 10px;
                 line-height: 15px;
-                
-                padding-bottom: 14px;
             }
-            
+
+            .descriptionCommon {
+                padding-bottom: 14px;
+
+                letter-spacing: 1.1px;
+
+                color: #000000;
+
+                font-size: 10px;
+                line-height: 15px;
+            }
+
             .tableRowName {
                 width: 160px;
             }
-            
+
             .illustration {
                 display: none;
             }
-            
+
             .footerTerra {
                 display: none;
             }
         }
-        
+
         .polatiNummulite {
             display: flex;
         }
@@ -222,10 +232,15 @@
 
 @media (min-width: 1000px) {
     .terraInnerWrapper {
+        overflow: hidden;
+
         padding-left: 250px;
-        
+
         .toTerroir {
             left: 310px;
+        }
+        .polatiNummulite {
+            overflow: hidden;
         }
     }
 }
@@ -233,7 +248,7 @@
 @media (min-width: 1200px) {
     .terraInnerWrapper {
         padding-left: 300px;
-        
+
         .toTerroir {
             left: 360px;
         }
